Bug 503164 - The compact status bar is too small for its content.
Summary: The compact status bar is too small for its content.
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: bars: status (other bugs)
Version First Reported In: 25.04.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-04-22 12:30 UTC by jonas.harer
Modified: 2025-04-24 13:11 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (105.81 KB, image/png)
2025-04-22 12:30 UTC, jonas.harer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jonas.harer 2025-04-22 12:30:37 UTC
Created attachment 180521 [details]
Screenshot

SUMMARY
The compact status bar is too small for its content.

STEPS TO REPRODUCE
1. Open Dolphin

OBSERVED RESULT
The status bar is too small for its content

EXPECTED RESULT
The status bar grows as much as needed for its content

SOFTWARE/OS VERSIONS
Linux: Arch Linux
KDE Plasma Version: 6.3.4
KDE Frameworks Version: 6.13.0
Qt Version: 6.9.0

ADDITIONAL INFORMATION

Graphics Platform: Wayland
System language: German
Comment 1 TraceyC 2025-04-22 21:51:00 UTC
Thanks for the bug report

In the screenshot, Dolphin is in the icon view. The footer is very small, less than about 7 characters wide
I'm not seeing the same bug in Dolphin built from git-master , or on Fedora 42, even when hovering over a folder with a long name
e.g. "Shared Folders (SMB)"
I tested with both English and German as the system language

Can you try testing Dolphin with a new user and see if it looks the same? Thanks.
Comment 2 jonas.harer 2025-04-23 13:38:08 UTC
Yes, it seems to be something  with my user profile. It works fine with a new user.
Comment 3 TraceyC 2025-04-23 16:47:55 UTC
Thanks for confirming that. What you can try on your regular user is to rename the Dolphin config file:

~/.config/dolphinrc

And then log out, and log back in. Do you still see the bug after that?
Comment 4 jonas.harer 2025-04-23 16:54:33 UTC
Yes the bug is still there. Additionally I noticed that the status bar is always between four and five characters too small.
Comment 5 John Kizer 2025-04-23 17:14:50 UTC
(In reply to jonas.harer from comment #4)
> Yes the bug is still there. Additionally I noticed that the status bar is
> always between four and five characters too small.

Hi - if you try closing Dolphin, renaming ~/.config/dolphinrc , and then also removing the contents of ~/.cache/dolphin , does it still occur?
Comment 6 jonas.harer 2025-04-23 17:47:30 UTC
Yes, it does.
Comment 7 Akseli Lahtinen 2025-04-23 19:47:53 UTC
Can confirm the issue, this was supposed to be fixed with https://invent.kde.org/system/dolphin/-/merge_requests/957 but apparently some styles still don't behave well with it. 

Will investigate further.
Comment 8 Bug Janitor Service 2025-04-24 12:11:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/961
Comment 9 Akseli Lahtinen 2025-04-24 13:11:01 UTC
Git commit be36fc1bc45b63693bd5861efed94c08cd9ffe2a by Akseli Lahtinen.
Committed on 24/04/2025 at 12:08.
Pushed by akselmo into branch 'master'.

DolphinStatusBar: Fix premature text squeezing

The text would get squeezed and elided prematurely due to some clipping
calculations and paddings created for the clipping.

This slightly modifies the clipping code, that we extend the painted
area and then clip off the excess, instead of moving the area to
specific place and then clipping off the excess.

This also makes sure the text width accounts for one extra character
plus the clippings we do, so that text will always fit the statusbar.

M  +3    -5    src/dolphinviewcontainer.cpp
M  +7    -4    src/statusbar/dolphinstatusbar.cpp

https://invent.kde.org/system/dolphin/-/commit/be36fc1bc45b63693bd5861efed94c08cd9ffe2a